crates/loom_tests/src/snapshots/squirrel_tests__sema__sema_2.snap
---
source: crates/loom_tests/src/sema.rs
expression: result
---
sema::continue_outside_loop

  x couldn't use `continue` statement outside of loop.
   ,-[test.loom:2:9]
 1 | 
 2 |         continue;
   :         ^^^^|^^^
   :             `-- this `continue` statement is invalid.
 3 |         
   `----
