crates/loom_tests/src/snapshots/squirrel_tests__sema__sema_3.snap
---
source: crates/loom_tests/src/sema.rs
expression: result
---
sema::return_outside_fn

  x couldn't use `return` statement outside of function.
   ,-[test.loom:2:9]
 1 | 
 2 |         return;
   :         ^^^|^^
   :            `-- this `return` statement is invalid.
 3 |         
   `----
