crates/loom_tests/src/snapshots/squirrel_tests__sema__sema_5.snap
---
source: crates/loom_tests/src/sema.rs
expression: result
---
sema::continue_outside_loop

  x couldn't use `continue` statement outside of loop.
   ,-[test.loom:5:21]
 2 |         fn outer() {
 3 |             while true {
 4 |                 fn inner() {
 5 |                     continue;
   :                     ^^^^|^^^
   :                         `-- this `continue` statement is invalid.
 6 |                 }
 7 |             }
 8 |         }
   `----
